Aligned the form into the center of the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <h1 class="title">Hang Man!</h1>
 
 
-
+<form>
+<input id="guess" type="text" name="guess">
+</form>
 
 
 <script src="app.js"></script>
