Resize input box

--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 <h1 class="title">Hang Man!</h1>
 
 
+
+
+
+
+
+
+
+
+<div class="input">
 <form>
 <input id="guess" type="text" name="guess">
 </form>
+</div>
 
 
 <script src="app.js"></script>
