Create divs for top half of hangman animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <h1 class="title">Hang Man!</h1>
 
-
+<div class="topstuff">
+<div class="hang-placeholder"></div>
+<div class="scaffolding-top"></div>
+<div class="scaffolding-left"></div>
 
 
 
