--- a/index.html
+++ b/index.html
@@ -8,43 +8,15 @@
 </head>
 <body>
 
-<h1 class="title">Hang Man!</h1>
+<h1>Hang Man!</h1>
 
-<div class="topstuff">
-<div class="hang-placeholder">
-<div class="scaffolding-top"></div>
-<div class="scaffolding-left"></div>
+<p>Directions</p>
 
-<div class="hang-area">
-	<div class="rope"></div>
-	</div>
+<form id="guess">
+<input type="text" maxlength="1" minlength="1" name="letter" id="letter">
 
-	<div class="base"></div>
-	</div>
-	<div class='word-box'>
-            <div class='word-display'>
-            </div>
-        </div>
 
-        <div class="bottom-stuff">
-        <div class='side-container'>
-        <div class='container-title'>Guess A Letter!</div>
-        <div class='input-area'>
-          <input id='letter-input' type='text' maxlength='1'/>
-        </div>
-      </div>
     
-      <div class='side-container'>
-        <div class='container-title'>Guessed Letters</div>
-        <div id="wrong-letters" class='input-area'></div>
-      </div>
-    </div>
-	
-
-
-
-
-
 
 
 
