Create submit and restart buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <p>Directions</p>
 
-<form id="guess">
-<input type="text" maxlength="1" minlength="1" name="letter" id="letter">
+<form id="main">
+<input type="text" maxlength="1" minlength="1" name="letter" id="letter" placeholder="You're going to lose" />
+<input id="Wrong Answer" type="submit" name="guess" value="Guess" />
+<button id="restart" name="restart" type="button">Restart</button>
 
 
     
