Create ul, lives and outcome in html

--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
 <input type="text" maxlength="1" minlength="1" name="letter" id="letter" placeholder="You're going to lose" />
 <input id="Wrong Answer" type="submit" name="guess" value="Guess" />
 <button id="restart" name="restart" type="button">Restart</button>
-
-
-    
-
-
-
-
-
-
+</form>
+<ul id="letters"></ul>
+<p id="lives"></p>
+<p id="outcome" class="outcome"></p>
+   
 <script src="app.js"></script>
 
 </body>
