--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <form id="main">
 <input type="text" maxlength="1" minlength="1" name="letter" id="letter" placeholder="You're going to lose" />
-<input id="Wrong Answer" type="submit" name="guess" value="Guess" />
+<input id="wrong" type="submit" name="guess" value="Guess" />
 <button id="restart" name="restart" type="button">Restart</button>
 </form>
 <ul id="letters"></ul>
