Almost finished with the first part of js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <button id="restart" name="restart" type="button">Restart</button>
 </form>
 <ul id="letters"></ul>
-<p id="lives"></p>
+<p id="molly"></p>
 <p id="outcome" class="outcome"></p>
    
 <script src="app.js"></script>
