--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <form id="main">
-<p>Directions</p>
+<p>Welcome to Angry Hang Man! The goal is to guess the hidden word! You have six pathetic lives to guess the word or you will lose/hypothitcally die. So go on and try not to die, but we really do hope you fail.</p>
 <input type="text" maxlength="1" minlength="1" name="letter" id="letter" placeholder="You're going to lose" />
 <input id="wrong" type="submit" name="guess" value="Guess" />
 <button id="restart" name="restart" type="button">Restart</button>
