--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 
 <form id="main">
-<p>Welcome to Angry Hang Man! The goal is to guess the hidden word! You have six pathetic lives to guess the word or you will lose/hypothitcally die. So go on and try not to die, but we really do hope you fail.</p>
+<p><b>Welcome to Angry Hang Man! The goal is to guess the hidden word! You have six pathetic lives to guess the word or you will lose/hypothitcally die. If the letter is guessed correct then we will allow you to keep your pitiful life. So go on and try not to die, but we really do hope you fail.</b></p>
 <input type="text" maxlength="1" minlength="1" name="letter" id="letter" placeholder="You're going to lose" />
 <input id="wrong" type="submit" name="guess" value="Guess" />
 <button id="restart" name="restart" type="button">Restart</button>
 </form>
 <ul id="letters"></ul>
 <p id="molly"></p>
-<p id="outcome" class="outcome"></p>
+<p id="outcome"></p>
    
 <script src="app.js"></script>
 
